# agentic_flow

./: .env.example  .gitignore  Code.gs  README.md  pyproject.toml
src/mcp_managed_agents/: __init__.py  __main__.py  client.py  events.py  server.py  tools.py
